--- a/build.gradle
+++ b/build.gradle
@@ -3,21 +3,26 @@
 buildscript {
     repositories {
         google()
-        jcenter()
-        
+        jcenter(){
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
+        mavenCentral()
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        jcenter() {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
         
     }
 }
