--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,10 @@ org.gradle.jvmargs=-Xmx1024m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
+# Gradle Version
+compile_sdk_version = 29
+build_tools_version = 29.0.2
+min_sdk_version = 16
+target_sdk_version = 29
+version_code = 1
+version_name = 1.0
