58课时7min47s，增加了泛型参数，准备连接http与task两个module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     //网络
     implementation("com.squareup.okhttp3:okhttp:4.2.2")
     //module的依赖引入
-    //implementation project(path: ':mvp')
+    implementation project(path: ':mvp')
     implementation project(path: ':http')
     implementation project(path: ':task')
 }
