--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.tuoren.splash">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon_min"
@@ -10,10 +12,6 @@
         android:roundIcon="@mipmap/icon_min"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".main.KangActivity"
-            android:label="@string/title_activity_kang"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".splash.SplashActivity"
             android:theme="@style/FullScree">
@@ -26,5 +24,4 @@
         <activity android:name=".main.MainActivity" />
         <activity android:name=".main.shanghai.view.ShanghaiDetailActivity" />
     </application>
-
 </manifest>
