--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,13 @@
 buildscript {
     repositories {
         google()
-        jcenter(){
-            url 'https://maven.aliyun.com/repository/jcenter'
+//        jcenter(){
+//            url 'https://maven.aliyun.com/repository/jcenter'
+//        }
+        jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
         }
         mavenCentral()
 //        maven { url 'https://maven.aliyun.com/repository/google' }
@@ -20,10 +25,15 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter() {
-            url 'https://maven.aliyun.com/repository/jcenter'
+//        jcenter() {
+//            url 'https://maven.aliyun.com/repository/jcenter'
+//        }
+        jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
         }
-        
+        maven { url 'https://jitpack.io' }
     }
 }
 
