--- a/http/build.gradle
+++ b/http/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     //网络
     implementation("com.squareup.okhttp3:okhttp:4.2.2")
+    implementation ("com.google.code.gson:gson:2.8.5")
 }
