--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion Integer.valueOf(compile_sdk_version)
     buildToolsVersion build_tools_version
+
+
     defaultConfig {
         minSdkVersion Integer.valueOf(min_sdk_version)
         targetSdkVersion Integer.valueOf(target_sdk_version)
@@ -25,7 +27,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    api 'androidx.test.ext:junit:1.1.0'
+    //androidTestImplementation  替换为 api
+    api 'androidx.test.espresso:espresso-core:3.1.1'
 }
