58课时结束,nullpoint空指针终于解决(instance判空的"=="写成了"!=",粗心导致,以及不会debug),以后认真看报错,不要慌不要盲目

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.tuoren.splash">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".main.MainActivity" />
+        <activity android:name=".main.KangActivity" />
+        <activity android:name=".base.BaseActivity" />
         <activity android:name=".main.shanghai.view.ShanghaiDetailActivity" />
     </application>
 </manifest>
