--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation project(path: ':mvp')
     implementation project(path: ':http')
     implementation project(path: ':task')
+    implementation ("com.google.code.gson:gson:2.8.5")
 }
