--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/icon_min"
+        android:icon="@mipmap/audi"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/icon_min"
+        android:roundIcon="@mipmap/audi"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
