75课时13:31结束,添加Littie控件,下拉刷新（未完成）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     //网络
     implementation("com.squareup.okhttp3:okhttp:4.2.2")
+    //动画 littie
+    implementation 'com.airbnb.android:lottie:2.2.5'
     //module的依赖引入
     implementation project(path: ':mvp')
     implementation project(path: ':http')
