--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,13 @@ android {
     }
 }
 
+android {
+    defaultConfig {
+        //解决多包依赖显示使用注解
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -45,9 +52,16 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     //网络
-    implementation("com.squareup.okhttp3:okhttp:4.2.2")
-    //动画 littie
+    //implementation("com.squareup.okhttp3:okhttp:4.2.2")
+    //动画 lottie
     implementation 'com.airbnb.android:lottie:2.2.5'
+    //apt
+    implementation project(':annotation')
+    annotationProcessor project(':apt')
+    //leakcanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
     //module的依赖引入
     implementation project(path: ':mvp')
     implementation project(path: ':http')
