--- a/http/build.gradle
+++ b/http/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     //网络
-    implementation("com.squareup.okhttp3:okhttp:4.2.2")
+    api("com.squareup.okhttp3:okhttp:4.2.2")
     implementation ("com.google.code.gson:gson:2.8.5")
 }
