--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation project(path: ':mvp')
     implementation project(path: ':http')
     implementation project(path: ':task')
-    implementation project(path: ':refresh')
+    //换成远程的 我放在git上的依赖
+//    implementation project(path: ':refresh')
+    implementation 'com.github.JDTTJD:TangRefreshLayout:V3.0.0'
     implementation ("com.google.code.gson:gson:2.8.5")
 }
