13章113课时09:42,永不崩溃根据子线程主线程Looper原理已实现，优化布局，改造shanghaiFragment为音视频界面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
 //    implementation project(path: ':refresh')
     implementation 'com.github.JDTTJD:TangRefreshLayout:V3.0.0'
     implementation ("com.google.code.gson:gson:2.8.5")
+    implementation ('androidx.cardview:cardview:1.0.0')
 }
