13章119课时结束,播放音频框架搭载完成，实现本地音频播放

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':http', ':task', ':mvp', ':refresh', ':annotation', ':apt'
+include ':app', ':http', ':task', ':mvp', ':refresh', ':annotation', ':apt', ':player'
 rootProject.name='Splash'
