--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
         <activity android:name=".main.KangActivity" />
         <activity android:name=".base.BaseActivity" />
         <activity android:name=".main.shanghai.view.ShanghaiDetailActivity" />
+
+        <!-- 播放器配置信息 -->
+        <meta-data
+            android:name="playertype"
+            android:value="1" />
     </application>
 <!--    <application-->
 <!--        android:name=".base.Test"-->
