14章131课时结束,ExoPlayer搭建完成(但是无效果，很纳闷),自己添加了一个水波纹按钮效果,准备使用广播通信

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <activity android:name=".main.MainActivity" />
         <activity android:name=".main.KangActivity" />
         <activity android:name=".base.BaseActivity" />
-        <activity android:name=".main.shanghai.view.ShanghaiDetailActivity" />
+        <activity
+            android:process=":shanghai.detail"
+            android:name=".main.shanghai.view.ShanghaiDetailActivity" />
 
         <!-- 播放器配置信息 -->
         <meta-data
