--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     package="com.tuoren.splash">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICsATION" />
 
     <application
         android:name=".base.SplashApplication"
@@ -23,6 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:authorities="com.tuoren.splash.process.data"
+            android:name=".main.beijing.MainProcessDataProvider" />
+
+        <service android:name=".main.beijing.MainProcessService" />
+        
         <activity android:name=".main.MainActivity" />
         <activity android:name=".main.KangActivity" />
         <activity android:name=".base.BaseActivity" />
