--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':http', ':task', ':mvp', ':refresh', ':annotation', ':apt', ':player'
+include ':app', ':http', ':task', ':mvp', ':refresh', ':annotation', ':apt', ':player', ':ipc'
 rootProject.name='Splash'
